Added CelsiUSA beta info

--- a/index.html
+++ b/index.html
@@ -361,6 +361,46 @@
   </div>
   <br>
 </div>
+	
+	<br>
+	<br>
+	
+	<div class="infoText"> <br>
+  <div class="hide-mobile">
+    <div class="altHStack">
+      <div class="appsImageContainer"> <img src="Images/Icons/Purple Glow.png" class="appsImage"> </div>
+      <div class="Hspacer15">
+        <p></p>
+      </div>
+      <div class="appInfo"> 
+        <h2 class="comingSoonBanner">Coming Soon</h2>
+        <h1 class="infoSubtextApp">CelsiUSA</h1>
+        <br>
+        <h4 class="infoSubtextApp"> Let me start by saying Fahrenheit sucks. The whole world agrees, heck even us lizard people from Mars agree. But the US seemingly cannot switch to Celsius like the rest of the world. Why you ask? Well change is hard. Let's take a trip to the past. Dinosaurs didn't change and now they're gone. People used to think the world was flat, now most of us know it's round. Initially, people didn't like electricity and now we can't imagine life without it. Basically what I am getting at is change is hard, but it is necesary. Now we can't change everything that needs it, but CelsiUSA's goal is to make this change a bit easier. Don't end up like a dino, transition from using Fahrenheit to Celsius. </h4>
+        <div class="centerButtons">
+          <div class="fillButtons"> <a href="https://docs.google.com/forms/d/e/1FAIpQLScWVhe0RRdVv6uRyUs0kcQou8kntdo2Gf-l-K9Ix4NIEmXR0A/viewform?usp=sf_link" class="fillButtonText"> Join Beta </a> </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="show-mobile">
+    <div>
+      <div class="appsImageContainerMobile"> <img src="Images/Icons/Purple Glow.png" class="mobileAppsImage"> </div>
+      <div class="mobileBannerContainter">
+                            <h2 class="mobileComingSoonBanner">Coming Soon</h2>
+                        </div>
+      <div class="appInfo">
+        <h1 class="infoSubtextApp">CelsiUSA</h1>
+        <br>
+        <h4 class="infoSubtextApp"> Let me start by saying Fahrenheit sucks. The whole world agrees, heck even us lizard people from Mars agree. But the US seemingly cannot switch to Celsius like the rest of the world. Why you ask? Well change is hard. Let's take a trip to the past. Dinosaurs didn't change and now they're gone. People used to think the world was flat, now most of us know it's round. Initially, people didn't like electricity and now we can't imagine life without it. Basically what I am getting at is change is hard, but it is necesary. Now we can't change everything that needs it, but CelsiUSA's goal is to make this change a bit easier. Don't end up like a dino, transition from using Fahrenheit to Celsius. </h4>
+        <div class="centerButtons">
+          <div class="fillButtons"> <a href="https://docs.google.com/forms/d/e/1FAIpQLScWVhe0RRdVv6uRyUs0kcQou8kntdo2Gf-l-K9Ix4NIEmXR0A/viewform?usp=sf_link" class="fillButtonText"> Learn More </a> </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <br>
+</div>
 <br>
 <br>
 <div class="infoText">
