Fixed some errors

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <meta name="description" content="Hello humans! We are a software development team from Mars. We have developed several apps including DoorHinge Parkour and No Athlete Alone.">
 <link rel="icon" type="image/x-icon" href="favicon.ico">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" type="text/css" media="all" type="text/css" href="css/base.css" />
+<link rel="stylesheet" type="text/css" media="all" href="css/base.css" />
 <!--
         <link rel="stylesheet" type="text/css" media="screen and (min-width:    0px) and (max-width: 400px)" href="css/400px.css" />
         <link rel="stylesheet" type="text/css" media="screen and (min-width:  340px) and (max-width: 639px)" href="css/639px.css" />
@@ -42,8 +42,8 @@
     </div>
     </a> </div>
   <input id="menu-toggle" type="checkbox" />
-  <label class='menu-button-container' for="menu-toggle">
-  <div class='menu-button'></div>
+  <label class="menu-button-container" for="menu-toggle">
+  <div class="menu-button"></div>
   </label>
   <ul class="menu">
     <li> <a href="https://doorhingeapps.com" class="whiteButtonText"> Home </a> </li>
@@ -129,8 +129,7 @@
   <h1 class="infoSubtextLeft">¿Como te Sientes?</h1>
   <h4 class="infoSubtextLeft"> Yk, social media exists for a reason ↓ </h4>
   <div class="centerButtons">
-    <div class="HStack"> 
-      <a href="https://youtube.com/@doorhingeparkour" class="otherFillButtons"> <img src="socials/Youtube.svg" class="otherSocialIcon"> </a>
+    <div class="HStack"> <a href="https://youtube.com/@doorhingeparkour" class="otherFillButtons"> <img src="socials/Youtube.svg" class="otherSocialIcon"> </a>
       <div class="Hspacer10">
         <p></p>
       </div>
@@ -161,11 +160,11 @@
         </div>--> 
 
 <br>
-	<br>
-	<div class="infoText">
+<br>
+<div class="infoText">
   <h1 class="infoSubtextLeft"> All Apps </h1>
 </div>
-	<br>
+<br>
 <div class="infoText"> <br>
   <div class="hide-mobile">
     <div class="altHStack">
@@ -356,18 +355,16 @@
   </div>
   <br>
 </div>
-	
-	<br>
-	<br>
-	
-	<div class="infoText"> <br>
+<br>
+<br>
+<div class="infoText"> <br>
   <div class="hide-mobile">
     <div class="altHStack">
       <div class="appsImageContainer"> <img src="Images/Icons/Purple Glow.png" class="appsImage"> </div>
       <div class="Hspacer15">
         <p></p>
       </div>
-      <div class="appInfo"> 
+      <div class="appInfo">
         <h2 class="comingSoonBanner">Coming Soon</h2>
         <h1 class="infoSubtextApp">CelsiUSA</h1>
         <br>
@@ -382,8 +379,8 @@
     <div>
       <div class="appsImageContainerMobile"> <img src="Images/Icons/Purple Glow.png" class="mobileAppsImage"> </div>
       <div class="mobileBannerContainter">
-                            <h2 class="mobileComingSoonBanner">Coming Soon</h2>
-                        </div>
+        <h2 class="mobileComingSoonBanner">Coming Soon</h2>
+      </div>
       <div class="appInfo">
         <h1 class="infoSubtextApp">CelsiUSA</h1>
         <br>
@@ -420,7 +417,7 @@
     <h5> DoorHinge Apps </h5>
     </a> </div>
   <div class="altHStack">
-    <div> </a> <a href="https://youtube.com/@doorhingeparkour"> <img src="socials/Youtube.svg" class="socialIcon"> </a> <a href="https://tiktok.com/@doorhingeparkour"> <img src="socials/Tiktok.svg" class="socialIcon"> </a> </div>
+    <div> <a href="https://youtube.com/@doorhingeparkour"> <img src="socials/Youtube.svg" class="socialIcon"> </a> <a href="https://tiktok.com/@doorhingeparkour"> <img src="socials/Tiktok.svg" class="socialIcon"> </a> </div>
   </div>
   <div class="copyright">
     <h5> ©2023 DoorHinge Apps </h5>
