--- a/Contributors.html
+++ b/Contributors.html
@@ -86,7 +86,7 @@
         <p></p>
       </div>
       <div class="peopleButtons"> <a href="index.html" class="peopleButtonText">
-        <div class="peopleHStack"> <img src="Images/Icons/Kiwi List Icon.png" class="peopleIcons">
+        <div class="peopleHStack"> <img src="Images/Icons/Purple Glow.png" class="peopleIcons">
           <h4 class="peopleButtonText">CelsiUSA</h4>
         </div>
         </a> </div>
