--- a/header.html
+++ b/header.html
@@ -19,8 +19,8 @@
   <div class="menu-button"></div>
   </label>
   <ul class="menu">
-    <li> <a href="https://doorhingeapps.com" class="whiteButtonText"> Home </a> </li>
-    <li> <a href="https://doorhingeapps.com/blog" class="whiteButtonText"> Blog </a> </li>
+    <li> <a href="index.html" class="whiteButtonText"> Home </a> </li>
+    <li> <a href="blog.html" class="whiteButtonText"> Blog </a> </li>
     <li> <a href="https://doorhingeparkour.com" class="whiteButtonText"> DoorHinge Parkour </a> </li>
     <li> <a href="https://themaclibrary.com" class="whiteButtonText"> The Mac Library </a> </li>
     <li> <a href="https://noathletealone.com" class="whiteButtonText"> No Athlete Alone </a> </li>
@@ -33,11 +33,6 @@
   </ul>
 </section>
 	<script>
-				$(document).on('click', 'a.whiteButtonText', function (event) {
-    event.preventDefault();
-
-    window.open($(this).attr('href'));
-});
 		
 						$(document).on('click', 'a.external', function (event) {
     event.preventDefault();
