--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     })(window, document, "clarity", "script", "g9w15u84m4");
 </script>
 <title>DoorHinge Apps</title>
-<meta name="description" content="Hello humans! We are a software development team from Mars. We have developed several apps including DoorHinge Parkour and No Athlete Alone.">
+<meta name="description" content="Hello humans! We are a software development team from Mars. We have developed several apps including DoorHinge Parkour and The Mac Library.">
 <link rel="icon" type="image/x-icon" href="favicon.ico">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
