Cleaned up some old files

--- a/blog.html
+++ b/blog.html
@@ -24,89 +24,13 @@
         <link rel="stylesheet" type="text/css" media="screen and (min-width:  340px) and (max-width: 639px)" href="css/639px.css" />
         <link rel="stylesheet" type="text/css" media="screen and (min-width:  640px) and (max-width: 999px)" href="css/999px.css" />
         -->
-        <link rel="stylesheet" type="text/css" media="screen and (min-width: 401px)" href="css/base.css" />
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
     </head>
 
     <body style="background-color: #A487FF">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-          <section class="top-nav">
-            <div>
-                <a href="https://doorhingeapps.com">
-                    <div class="altHStack">
-                        <div class="logo">
-                            <img src="Images/logo animation.gif" alt="DoorHinge Apps Logo" class="animatedLogo">
-                        </div>
-                    
-                        <h1 class="navBarTitle">
-                            DoorHinge Apps
-                        </h1>
-                    </div>
-                </a>
-            </div>
-            <input id="menu-toggle" type="checkbox" />
-            <label class='menu-button-container' for="menu-toggle">
-            <div class='menu-button'></div>
-            </label>
-            <ul class="menu">
-                <li>
-                    <a href="https://doorhingeapps.com" class="whiteButtonText">
-                        Home
-                    </a>
-                </li>
-                <li>
-                    <a href="https://doorhingeapps.com/blog" class="whiteButtonText">
-                        Blog
-                    </a>
-                </li>
-                <li>
-                    <a href="https://doorhingeparkour.com" class="whiteButtonText">
-                        DoorHinge Parkour
-                    </a>
-                </li>
-                <li>
-                    <a href="https://themaclibrary.com" class="whiteButtonText">
-                        The Mac Library
-                    </a>
-                </li>
-                <li>
-                    <a href="https://noathletealone.com" class="whiteButtonText">
-                        No Athlete Alone
-                    </a>
-                </li>
-                <li>
-                    <a href="https://kiwilist.app" class="whiteButtonText">
-                        Kiwi List
-                    </a>
-                </li>
-                <li>
-                    <a href="contact.html" class="whiteButtonText">
-                        Contact
-                    </a>
-                </li>
-                <li>
-                    <div class="altHStack">
-                        <div class="socials">
-                            <a href="https://youtube.com/@doorhingeparkour">
-                                <img src="socials/YouTube Icon.png" class="socialIconMenu">
-                            </a>
-                            <a href="https://tiktok.com/@doorhingeparkour">
-                                <img src="socials/TikTok Icon.png" class="socialIconMenu">
-                            </a>
-                            <a href="https://www.etsy.com/shop/DoorHingeApps?listing_id=1361313416">
-                                <img src="socials/Etsy Icon.png" class="socialIconMenu">
-                            </a>
-                            <a href="mailto:support@doorhingeapps.com">
-                                <img src="socials/Email Icon.png" class="socialIconMenu">
-                            </a>
-                            <a href="https://www.buymeacoffee.com/caedmonm">
-                                <img src="socials/Buy me a Coffee Icon.png" class="socialIconMenu">
-                            </a>
-                        </div>
-                    </div>
-                </li>
-            </ul>
-          </section>
+        <div id="header"></div>
 
 
         <a href="index.html">
@@ -216,17 +140,18 @@
             </div>
         </div>
 
-        <br>
+        <div id="footer"></div>
+	<script>
+$(function() {
+    $("#header").load("header.html"); 
+    $("#footer").load("footer.html"); 
+});
+		$(document).on('click', 'a.socialIcon', function (event) {
+    event.preventDefault();
 
-        <div class="infoText">
-            <h5 class="infoSubtextCenter">End of Feed</h5>
-        </div>
-
-        <br>
-        <hr>
-        <br>
-
-        <embed type="text/html" src="footer.html" width="100%" height="200">
+    window.open($(this).attr('href'));
+});
+		</script>
             
     </body>
 </div>
