--- a/naa-eula.html
+++ b/naa-eula.html
@@ -107,7 +107,7 @@
                 <h4>
                     Last updated November 07, 2022
 
-                    No Athlete Alone is licensed to You (End-User) by No Athlete Alone, located at __________, __________, __________ __________, United States ("Licensor"), for use only under the terms of this License Agreement.
+                    No Athlete Alone is licensed to You (End-User) by No Athlete Alone, United States ("Licensor"), for use only under the terms of this License Agreement.
 
                     By downloading the Licensed Application from Apple's software distribution platform ("App Store"), and any update thereto (as permitted by this License Agreement), You indicate that You agree to be bound by all of the terms and conditions of this License Agreement, and that You accept this License Agreement. App Store is referred to in this License Agreement as "Services."
 
