--- a/index.html
+++ b/index.html
@@ -56,14 +56,6 @@
 </div>
 <br>
 <br>
-<div class="infoText">
-	<div>
-		<h1 class="infoSubtextLeft"> Happy Pride Everyone! </h1>
-		<h3 class="infoSubtextLeft"> Hey there earthlings! We believe in the beauty of all colors of the human spectrum, even if your brains struggle to comprehend the magnificence of diversity. So, let's code a world full of acceptance and love, because, after all, love is universal - and it's free! Happy pride month everyone :) </h3>
-	</div>
-</div>
-<br>
-<br>
 <div class="infoText"> 
 	
 	<!-- Begin Mailchimp Signup Form -->
@@ -142,6 +134,52 @@
 	<h1 class="infoSubtextLeft"> All Apps </h1>
 </div>
 <br>
+
+<div class="infoText"> <br>
+	<div class="hide-mobile">
+		<div class="altHStack">
+			<div class="appsImageContainer"> <img src="Images/Icons/Purple Glow.png" class="appsImage"> </div>
+			<div class="Hspacer15">
+				<p></p>
+			</div>
+			<div class="appInfo">
+				<h2 class="newReleaseBanner">New Release</h2>
+				<h1 class="infoSubtextApp">CelsiUSA</h1>
+				<br>
+				<h4 class="infoSubtextApp">Hello humans. Most of the world uses Celsius, but the United States still uses Fahrenheit. So, why is that? TBH, I don't know. It's time we make Celsius the standard unit for everyone. This will allow everyone in the world to standardize the units we use to remove unnecessary conversions. And, Celsius is just easier for anyone to remember. 0 is water freezing and 100 is boiling. Our app gives you an easy way to learn Celsius and slowly switch from Fahrenheit.</h4>
+				<div class="centerButtons">
+					<div class="fillButtons"> <a href="https://apps.apple.com/in/app/celsiusa/id6449006027" class="fillButtonText"> Download </a> </div>
+					<div class="Hspacer20"></div>
+					<div class="fillButtons"> <a href="https://docs.google.com/forms/d/e/1FAIpQLScWVhe0RRdVv6uRyUs0kcQou8kntdo2Gf-l-K9Ix4NIEmXR0A/viewform?usp=sf_link" class="fillButtonText"> Join Beta </a> </div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="show-mobile">
+		<div>
+			<div class="appsImageContainerMobile"> <img src="Images/Icons/Purple Glow.png" class="mobileAppsImage"> </div>
+			<div class="mobileBannerContainter">
+				<div class="mobileBannerContainter">
+					<h2 class="newReleaseBanner">New Release</h2>
+				</div>
+				<br>
+			</div>
+			<div class="appInfo">
+				<h1 class="infoSubtextApp">CelsiUSA</h1>
+				<br>
+				<h4 class="infoSubtextApp"> Hello humans. Most of the world uses Celsius, but the United States still uses Fahrenheit. So, why is that? TBH, I don't know. It's time we make Celsius the standard unit for everyone. This will allow everyone in the world to standardize the units we use to remove unnecessary conversions. And, Celsius is just easier for anyone to remember. 0 is water freezing and 100 is boiling. Our app gives you an easy way to learn Celsius and slowly switch from Fahrenheit.</h4>
+				<div class="centerButtons">
+					<div class="fillButtons"> <a href="https://apps.apple.com/in/app/celsiusa/id6449006027" class="fillButtonText"> Download </a> </div>
+					<div class="Hspacer20"></div>
+					<div class="fillButtons"> <a href="https://docs.google.com/forms/d/e/1FAIpQLScWVhe0RRdVv6uRyUs0kcQou8kntdo2Gf-l-K9Ix4NIEmXR0A/viewform?usp=sf_link" class="fillButtonText"> Join Beta </a> </div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<br>
+</div>
+<br>
+
 <div class="infoText"> <br>
 	<div class="hide-mobile">
 		<div class="altHStack">
@@ -191,7 +229,9 @@
 	</div>
 	<br>
 </div>
+
 <br>
+
 <div class="infoText"> <br>
 	<div class="hide-mobile">
 		<div class="altHStack">
@@ -200,10 +240,6 @@
 				<p></p>
 			</div>
 			<div class="appInfo">
-				<div class="mobileBannerContainter">
-					<h2 class="newReleaseBanner">New Release</h2>
-					<br>
-				</div>
 				<h1 class="infoSubtextApp">The MacLibrary</h1>
 				<br>
 				<h4 class="infoSubtextApp"> Hey humans! It's another app from us! We are thrilled to introduce The Mac Library, the app library Apple should have made for your Mac. Tired of Launchpad's shenanigans? There's an app for that! Now I know you're wondering, "How could this possibly get better?" Well, the answer is simple. It's free. </h4>
@@ -220,12 +256,7 @@
 	<div class="show-mobile">
 		<div>
 			<div class="appsImageContainerMobile"> <img src="Images/Icons/App Library Icon.png" class="mobileAppsImage"> </div>
-			<div class="mobileBannerContainter">
-				<div class="mobileBannerContainter">
-					<h2 class="newReleaseBanner">New Release</h2>
-				</div>
-				<br>
-			</div>
+			
 			<div class="appInfo">
 				<h1 class="infoSubtextApp">The MacLibrary</h1>
 				<br>
@@ -287,7 +318,7 @@
 	</div>
 	<br>
 </div>
-<br>
+<!--<br>
 <div class="infoText"> <br>
 	<div class="hide-mobile">
 		<div class="altHStack">
@@ -296,7 +327,7 @@
 				<p></p>
 			</div>
 			<div class="appInfo"> 
-				<!-- <h2 class="comingSoonBanner">Version 4.0 Coming Soon</h2> -->
+				<h2 class="newReleaseBanner">No Longer Available</h2>
 				<h1 class="infoSubtextApp">The Caedmon App</h1>
 				<br>
 				<h4 class="infoSubtextApp"> What happens when a team of lizard software developers from Mars gets bored? Well, this is your answer. Our app includes the most random projects we have ever created including Vague Measure, the Caedmon Soundboard, and Color Buttons with even more coming soon. </h4>
@@ -313,9 +344,9 @@
 	<div class="show-mobile">
 		<div>
 			<div class="appsImageContainerMobile"> <img src="Images/Icons/The Caedmon App Icon.png" class="mobileAppsImage"> </div>
-			<!-- <div class="mobileBannerContainter">
+			<div class="mobileBannerContainter">
                             <h2 class="mobileComingSoonBanner">Version 4.0 Coming Soon</h2>
-                        </div> -->
+                        </div>
 			<div class="appInfo">
 				<h1 class="infoSubtextApp">The Caedmon App</h1>
 				<br>
@@ -329,45 +360,7 @@
 				</div>
 			</div>
 		</div>
-	</div>
-	<br>
-</div>
-<br>
-<br>
-<div class="infoText"> <br>
-	<div class="hide-mobile">
-		<div class="altHStack">
-			<div class="appsImageContainer"> <img src="Images/Icons/Purple Glow.png" class="appsImage"> </div>
-			<div class="Hspacer15">
-				<p></p>
-			</div>
-			<div class="appInfo">
-				<h2 class="newReleaseBanner">Coming Soon</h2>
-				<h1 class="infoSubtextApp">CelsiUSA</h1>
-				<br>
-				<h4 class="infoSubtextApp"> Let me start by saying Fahrenheit sucks. The whole world agrees, heck even us lizard people from Mars agree. But the US seemingly cannot switch to Celsius like the rest of the world. Why you ask? Well change is hard. Let's take a trip to the past. Dinosaurs didn't change and now they're gone. People used to think the world was flat, now most of us know it's round. Initially, people didn't like electricity and now we can't imagine life without it. Basically what I am getting at is change is hard, but it is necesary. Now we can't change everything that needs it, but CelsiUSA's goal is to make this change a bit easier. Don't end up like a dino, transition from using Fahrenheit to Celsius. </h4>
-				<div class="centerButtons">
-					<div class="fillButtons"> <a href="https://docs.google.com/forms/d/e/1FAIpQLScWVhe0RRdVv6uRyUs0kcQou8kntdo2Gf-l-K9Ix4NIEmXR0A/viewform?usp=sf_link" class="fillButtonText"> Join Beta </a> </div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<div class="show-mobile">
-		<div>
-			<div class="appsImageContainerMobile"> <img src="Images/Icons/Purple Glow.png" class="mobileAppsImage"> </div>
-			<div class="mobileBannerContainter">
-				<h2 class="mobileNewReleaseBanner">Coming Soon</h2>
-			</div>
-			<div class="appInfo">
-				<h1 class="infoSubtextApp">CelsiUSA</h1>
-				<br>
-				<h4 class="infoSubtextApp"> Let me start by saying Fahrenheit sucks. The whole world agrees, heck even us lizard people from Mars agree. But the US seemingly cannot switch to Celsius like the rest of the world. Why you ask? Well change is hard. Let's take a trip to the past. Dinosaurs didn't change and now they're gone. People used to think the world was flat, now most of us know it's round. Initially, people didn't like electricity and now we can't imagine life without it. Basically what I am getting at is change is hard, but it is necesary. Now we can't change everything that needs it, but CelsiUSA's goal is to make this change a bit easier. Don't end up like a dino, transition from using Fahrenheit to Celsius. </h4>
-				<div class="centerButtons">
-					<div class="fillButtons"> <a href="https://docs.google.com/forms/d/e/1FAIpQLScWVhe0RRdVv6uRyUs0kcQou8kntdo2Gf-l-K9Ix4NIEmXR0A/viewform?usp=sf_link" class="fillButtonText"> Join Beta </a> </div>
-				</div>
-			</div>
-		</div>
-	</div>
+	</div>-->
 	<br>
 </div>
 <br>
