Updated Menu and links

--- a/header.html
+++ b/header.html
@@ -20,10 +20,10 @@
   </label>
   <ul class="menu">
     <li> <a href="index.html" class="whiteButtonText"> Home </a> </li>
-    <li> <a href="blog.html" class="whiteButtonText"> Blog </a> </li>
+    <li> <a href="https://doorhingeapps.com/blog" class="whiteButtonText"> Blog </a> </li>
     <li> <a href="https://doorhingeparkour.com" class="whiteButtonText"> DoorHinge Parkour </a> </li>
     <li> <a href="https://themaclibrary.com" class="whiteButtonText"> The Mac Library </a> </li>
-    <li> <a href="https://noathletealone.com" class="whiteButtonText"> No Athlete Alone </a> </li>
+    <li> <a href="https://celsiusa.doorhingeapps.com" class="whiteButtonText"> CelsiUSA Weather </a> </li>
     <li> <a href="contact.html" class="whiteButtonText"> Contact </a> </li>
     <li>
       <div class="altHStack">
