Updated Google Adsense

--- a/Contributors.html
+++ b/Contributors.html
@@ -13,6 +13,10 @@
 <title>Contributors | DoorHinge Apps</title>
 <meta name="description" content="Contributors of DoorHinge Apps || Caedmon Myers | Projects: DoorHinge Parkour, No Athlete Alone, Kiwi List, The Caedmon App || Nevaeh Skinner | Projects: No Athlete Alone">
 <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5723952362361159"
+     crossorigin="anonymous"></script>
+
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" media="all" href="css/base.css" />
 <!--
