--- a/blog.html
+++ b/blog.html
@@ -12,6 +12,9 @@
           gtag('config', 'G-7747XZXY15');
         </script>
 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5723952362361159"
+crossorigin="anonymous"></script>
+
         <title>News | DoorHinge Apps</title>
         <meta name="description" content="View updates, new info, and more about our apps.">
 
