--- a/footer.html
+++ b/footer.html
@@ -2,6 +2,9 @@
 <div>
 <head>
 <link rel="stylesheet" type="text/css" media="all" href="css/base.css" />
+
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5723952362361159"
+     crossorigin="anonymous"></script>
 </head>
 <body style="background-color: #A487FF">
 <br>
