--- a/naa-eula.html
+++ b/naa-eula.html
@@ -15,6 +15,9 @@
         <link rel="icon" type="image/x-icon" href="favicon.ico">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5723952362361159"
+        crossorigin="anonymous"></script>
+
         <link rel="stylesheet" type="text/css" media="all" type="text/css" href="css/naa.css" />
         <!--
         <link rel="stylesheet" type="text/css" media="screen and (min-width:    0px) and (max-width: 400px)" href="css/400px.css" />
