--- a/contact.html
+++ b/contact.html
@@ -18,6 +18,9 @@
         <link rel="icon" type="image/x-icon" href="favicon.ico">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5723952362361159"
+        crossorigin="anonymous"></script>
+
         <link rel="stylesheet" type="text/css" media="all" href="css/base.css" />
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <!--
