--- a/index.html
+++ b/index.html
@@ -86,7 +86,21 @@ crossorigin="anonymous"></script>
 	
 	<!--End mc_embed_signup--> 
 </div>
+
 <br>
+
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5723952362361159"
+     crossorigin="anonymous"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="fluid"
+     data-ad-layout-key="-hj-2+2s-98+9b"
+     data-ad-client="ca-pub-5723952362361159"
+     data-ad-slot="9177673018"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
 <br>
 <div class="infoText">
 	<h1 class="infoSubtextLeft"> Merchandise </h1>
@@ -106,6 +120,19 @@ crossorigin="anonymous"></script>
 	</div>
 </div>
 <br>
+
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5723952362361159"
+     crossorigin="anonymous"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="fluid"
+     data-ad-layout-key="-hj-2+2s-98+9b"
+     data-ad-client="ca-pub-5723952362361159"
+     data-ad-slot="9177673018"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
 <br>
 <div class="infoText">
 	<h1 class="infoSubtextLeft">Contact</h1>
@@ -229,6 +256,21 @@ crossorigin="anonymous"></script>
 	</div>
 	<br>
 </div>
+
+
+
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5723952362361159"
+     crossorigin="anonymous"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="fluid"
+     data-ad-layout-key="-hj-2+2s-98+9b"
+     data-ad-client="ca-pub-5723952362361159"
+     data-ad-slot="9177673018"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
 
 <br>
 
@@ -364,6 +406,19 @@ crossorigin="anonymous"></script>
 	<br>
 </div>
 <br>
+
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5723952362361159"
+     crossorigin="anonymous"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="fluid"
+     data-ad-layout-key="-hj-2+2s-98+9b"
+     data-ad-client="ca-pub-5723952362361159"
+     data-ad-slot="9177673018"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
 <br>
 <div class="infoText">
 	<h1 class="infoSubtextLeft"> Our Blog </h1>
@@ -379,6 +434,58 @@ crossorigin="anonymous"></script>
                 --> 
 	</div>
 </div>
+
+
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5723952362361159"
+     crossorigin="anonymous"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="fluid"
+     data-ad-layout-key="-hj-2+2s-98+9b"
+     data-ad-client="ca-pub-5723952362361159"
+     data-ad-slot="9177673018"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5723952362361159"
+     crossorigin="anonymous"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="fluid"
+     data-ad-layout-key="-hj-2+2s-98+9b"
+     data-ad-client="ca-pub-5723952362361159"
+     data-ad-slot="9177673018"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5723952362361159"
+     crossorigin="anonymous"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="fluid"
+     data-ad-layout-key="-hj-2+2s-98+9b"
+     data-ad-client="ca-pub-5723952362361159"
+     data-ad-slot="9177673018"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5723952362361159"
+     crossorigin="anonymous"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="fluid"
+     data-ad-layout-key="-hj-2+2s-98+9b"
+     data-ad-client="ca-pub-5723952362361159"
+     data-ad-slot="9177673018"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
+
+
 <div id="footer"></div>
 <script>
 $(function() {
