Google Adsense updates

--- a/Contributors.html
+++ b/Contributors.html
@@ -98,6 +98,20 @@
   </div>
 </div>
 <br>
+
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5723952362361159"
+     crossorigin="anonymous"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="fluid"
+     data-ad-layout-key="-hj-2+2s-98+9b"
+     data-ad-client="ca-pub-5723952362361159"
+     data-ad-slot="9177673018"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
+<br>
 <div class="infoText">
   <h2 class="infoSubtextLeft"> Nevaeh Skinner </h2>
   <div class="peopleBox"> <img src="Images/People/nevaeh.png"> </div>
@@ -118,6 +132,18 @@
     </div>
   </div>
 </div>
+
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5723952362361159"
+     crossorigin="anonymous"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="autorelaxed"
+     data-ad-client="ca-pub-5723952362361159"
+     data-ad-slot="3887448195"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
 <div id="footer"></div>
 	<script>
 $(function() {
