--- a/index.html
+++ b/index.html
@@ -440,46 +440,9 @@ crossorigin="anonymous"></script>
      crossorigin="anonymous"></script>
 <ins class="adsbygoogle"
      style="display:block"
-     data-ad-format="fluid"
-     data-ad-layout-key="-hj-2+2s-98+9b"
+     data-ad-format="autorelaxed"
      data-ad-client="ca-pub-5723952362361159"
-     data-ad-slot="9177673018"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5723952362361159"
-     crossorigin="anonymous"></script>
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-format="fluid"
-     data-ad-layout-key="-hj-2+2s-98+9b"
-     data-ad-client="ca-pub-5723952362361159"
-     data-ad-slot="9177673018"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5723952362361159"
-     crossorigin="anonymous"></script>
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-format="fluid"
-     data-ad-layout-key="-hj-2+2s-98+9b"
-     data-ad-client="ca-pub-5723952362361159"
-     data-ad-slot="9177673018"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5723952362361159"
-     crossorigin="anonymous"></script>
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-format="fluid"
-     data-ad-layout-key="-hj-2+2s-98+9b"
-     data-ad-client="ca-pub-5723952362361159"
-     data-ad-slot="9177673018"></ins>
+     data-ad-slot="3887448195"></ins>
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
