--- a/naa-eula.html
+++ b/naa-eula.html
@@ -298,6 +298,18 @@
                 </h4>
             </div>
         </div>
+
+
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5723952362361159"
+     crossorigin="anonymous"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="autorelaxed"
+     data-ad-client="ca-pub-5723952362361159"
+     data-ad-slot="3887448195"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
         
         <br>
         <hr>
